  * raggle: put Engine:find_feeds() back where it belongs (hint:
    it's not in NcursesInterface)

* Mon Jul 12 20:31:53 2004, pabs <pabs@pablotron.org>
  * raggle: moved config loading and saving from main to Engine::load_config
    and Engine::save_config, respectively
  * raggle: fixed URL handlers so feed grabbing works again
  * raggle: moved feed grabbing thread code to Engine::start_feed_thread
  * raggle: fixed HTTP redirect handling
  * raggle: commented out 'shell_meta_regex' in default config; we don't
    use it any more and it was screwing up my syntax hilighting

* Wed Jul 14 10:36:30 2004, pabs <pabs@pablotron.org>
  * raggle: moved thread handling to Engine::set_thread_priorities
  * raggle: each interface now has a main_loop method

* Wed Jul 14 15:52:55 2004, pabs <pabs@pablotron.org>
  * raggle: update tom's RSS feed URL

* Wed Jul 14 17:40:41 2004, pabs <pabs@pablotron.org>
  * raggle: added Raggle::Interfaces::HTTPServerInterface::init and
    Raggle::Interfaces::DRbServerInteface::init
  * raggle: renamed Raggle::Interfaces::NcursesInterface::setup_win of
    Raggle::Interfaces::NcursesInterfaces::init

* Thu Aug 12 17:40:35 2004, pabs <pabs@pablotron.org>
	* TODO: added a couple of ideas I thought of

* Mon Aug 23 15:02:00 2004, pabs <pabs@pablotron.org>
	* raggle: fix null deref in populate_feed_win

* Tue Aug 24 14:56:44 2004, pabs <pabs@pablotron.org>
	* raggle: PLATFORM => RUBY_PLATFORM, VERSION => RUBY_VERSION (reported
		by Robert McGovern <robertm@spellmanhv.co.uk>.  Apparently that
		causes Cygwin to have a fit.

* Tue Aug 24 23:26:01 2004, pabs <pabs@pablotron.org>
  * raggle: minor TODO update

* Thu Aug 26 15:54:53 2004, pabs <pabs@pablotron.org>
  * raggle: apply patch from Michael Ablassmeier <abi@grinser.de> that
		fixes import of Amphetadesk OPML files (closes
		http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=266046)

* Tue Sep 21 02:44:40 2004, pabs <pabs@pablotron.org>
  * TODO: add note about delicious integration